wordpress-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-nginx
spec:
  selector:
    matchLabels:
      app: wordpress-nginx
  template:
    metadata:
      labels:
        app: wordpress-nginx
    spec:
      containers:
      - name: nginx-nginx
        image: nginx:1.27-alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wordpress-pv-claim
