wordpress-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-nginx-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wordpress-nginx
  type: LoadBalancer
