wordpress-fpm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-nginx-ingress
  labels:
    name: wordpress
    namespace: wordpress
spec:
  rules:
  - host: <Host>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress-nginx-service
            port: 
              number: 80
